This database migration stuff is kinda hot

--- a/app/views/welcome/sample.html.erb
+++ b/app/views/welcome/sample.html.erb
@@ -6,3 +6,7 @@
 <%= 20.times do |i| %>
 	<%= i %>
 <% end %>
+
+<%= "Message from controller: #{@controller_message}" %>
+
+<%= link_to("This is a thicc link",{:controller => 'welcome', :action => 'index', :comingfrom => 'sample'})%>
