--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Moviereviews</title>
+  	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>WhyIHateMovies</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,6 +12,33 @@
   </head>
 
   <body>
+  	<div class="container-fluid">
+
+  	<nav class="navbar navbar-expand-lg navbar-dark bg-danger" style="border-radius:5px;">
+	  <%= link_to 'Why I Hate Movies', {:controller => 'pages', :action => 'home'}, :class => 'navbar-brand' %>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+	    <ul class="navbar-nav">
+	      <li class="nav-item">
+	        <%= link_to "Home", {:controller => 'pages', :action => 'home'}, :class => "nav-link" %>
+	      </li>
+	      <li class="nav-item">
+	        <%= link_to "Articles", {:controller => 'articles'}, :class => "nav-link" %>
+	      </li>
+	      <li class="nav-item">
+	        <%= link_to "Users", {:controller => 'users'}, :class => "nav-link" %>
+	      </li>
+	      <li class="nav-item">
+	        <%= link_to "About", {:controller => 'pages', :action => 'about'}, :class => "nav-link" %>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
+
     <%= yield %>
+
+    </div>
   </body>
 </html>
