Minor style changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>WhyIHateMovies</title>
+    <title>HerbDict</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -24,7 +24,7 @@
 
 	<div id="main">
 
-	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
     <%= yield %>
 
     </div>
