--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 
 .sidenav {
     height: 100%;
-    width: 0;
+    width: 250px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -54,6 +54,7 @@
 #main {
     transition: margin-left .5s;
     padding: 16px;
+    margin-left:250px;
 }
 
 @media screen and (max-height: 450px) {
